--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src http://localhost:*; connect-src ws://localhost:*">
+	<!--
+		'unsafe-inline' is required for svelte-splitpanes
+		See: [https://stackoverflow.com/a/54484389]
+		and: [https://stackoverflow.com/a/46259847]
+	-->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src http://localhost:*; connect-src ws://localhost:*">
 
 	<title>AI Photo Editor</title>
 
