--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 	<title>AI Photo Editor</title>
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel='icon' type='image/png' href='./images/svelte-so-hot.jpg'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
