--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 	<script defer src='./build/bundle.js'></script>
 </head>
 
-<body class="bg-sky-800">
+<body class="bg-zinc-800 p-0">
 </body>
 </html>
