Fix only one edge sent over IPC each update

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		See: [https://stackoverflow.com/a/54484389]
 		and: [https://stackoverflow.com/a/46259847]
 	-->
-	<meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;default-src 'self' 'unsafe-inline'; script-src 'self' http://localhost:*; connect-src ws://localhost:*">
+	<meta http-equiv="Content-Security-Policy" content="img-src 'self' data: https:;default-src 'self' 'unsafe-inline'; script-src 'self' http://localhost:*; connect-src ws://localhost:*">
 
 	<title>AI Photo Editor</title>
 
