--- a/blix-plugins/glfx-plugin/src/index.html
+++ b/blix-plugins/glfx-plugin/src/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="./global.css">
     <link rel="stylesheet" href="../dist/bundle.css">
+    <script src="./glfx.js"></script>
     <script defer src="../dist/bundle.js"></script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
