Fix Blink race condition on webview load; Add Blink inputShape node

--- a/blix-plugins/blink/src/index.html
+++ b/blix-plugins/blink/src/index.html
@@ -13,6 +13,17 @@
     <script type="text/javascript" src="./shader.js"></script> -->
 
     <script defer src="../dist/bundle.js"></script>
+    <style>
+        html {
+            padding: 0px;
+            margin: 0px;
+        }
+        body {
+            overflow: hidden;
+            padding: 0px;
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
 </body>
