Fix GLFX canvas overflow & add large image resolution clamping

--- a/blix-plugins/glfx-plugin/src/index.html
+++ b/blix-plugins/glfx-plugin/src/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="../dist/bundle.css">
     <script src="./glfx.js"></script>
     <script defer src="../dist/bundle.js"></script>
+    <style>
+        html {
+            padding: 0px;
+            margin: 0px;
+        }
+        body {
+            overflow: hidden;
+            padding: 0px;
+            margin: 0px;
+        }
+    </style>
 </head>
 <body></body>
 </html>
